objects/ASI_CRM_Promotion_Master__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Buy_X__c</fullName>
        <label>Buy X</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Discount__c</fullName>
        <label>Discount %</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_External_ID__c</fullName>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_CRM_Get_Y__c</fullName>
        <label>Get Y</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Promotion_ID__c</fullName>
        <displayFormat>PM-{00000000}</displayFormat>
        <label>Promotion ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Buy X Get Y</fullName>
                </value>
                <value>
                    <fullName>Discount</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CTY_CN_WS_AD_AC_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>A&amp;D A/C Code</label>
        <referenceTo>ASI_MFM_A_C_Code__c</referenceTo>
        <relationshipLabel>Promotion Masters (A&amp;D A/C Code)</relationshipLabel>
        <relationshipName>Promotion_Masters_AD</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CTY_CN_WS_AD_Description__c</fullName>
        <label>A&amp;D Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CTY_CN_WS_AD_GL_Offset__c</fullName>
        <label>A&amp;D GL Offset</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CTY_CN_WS_AD_Promotion_Code__c</fullName>
        <label>A&amp;D Promotion Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CTY_CN_WS_Channel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Channel</label>
        <referenceTo>ASI_CRM_CN_Channel__c</referenceTo>
        <relationshipLabel>Promotion Masters</relationshipLabel>
        <relationshipName>Promotion_Masters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CTY_CN_WS_Commercial_Team__c</fullName>
        <label>Commercial Team</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Prestige</fullName>
                </value>
                <value>
                    <fullName>Premium</fullName>
                </value>
                <value>
                    <fullName>HQ/Hotel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CTY_CN_WS_Customer_Type__c</fullName>
        <label>Customer Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Wholesaler</fullName>
                </value>
                <value>
                    <fullName>Outlet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CTY_CN_WS_Normal_AC_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Normal A/C Code</label>
        <referenceTo>ASI_MFM_A_C_Code__c</referenceTo>
        <relationshipLabel>Promotion Masters</relationshipLabel>
        <relationshipName>Promotion_Masters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CTY_CN_WS_Normal_Description__c</fullName>
        <label>Normal Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CTY_CN_WS_Normal_GL_Offset__c</fullName>
        <label>Normal GL Offset</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CTY_CN_WS_Normal_Promotion_Code__c</fullName>
        <label>Normal Promotion Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CTY_CN_WS_Price_Promotion_Type__c</fullName>
        <label>Price Promotion Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Buy X Get Y</fullName>
                </value>
                <value>
                    <fullName>Price Discount%</fullName>
                </value>
                <value>
                    <fullName>Price Reduction</fullName>
                </value>
                <value>
                    <fullName>Direct Price Discount</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CTY_CN_WS_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Region</label>
        <referenceTo>ASI_CRM_Region__c</referenceTo>
        <relationshipLabel>Promotion Masters</relationshipLabel>
        <relationshipName>Promotion_Masters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CTY_CN_WS_Trade_a_p_AC_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Trade a&amp;p A/C Code</label>
        <referenceTo>ASI_MFM_A_C_Code__c</referenceTo>
        <relationshipLabel>Promotion Masters (Trade a&amp;p A/C Code)</relationshipLabel>
        <relationshipName>Promotion_Masters1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CTY_CN_WS_Trade_a_p_Description__c</fullName>
        <label>Trade a&amp;p Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CTY_CN_WS_Trade_a_p_GL_Offset__c</fullName>
        <label>Trade a&amp;p GL Offset</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CTY_CN_WS_Trade_a_p_Promotion_Code__c</fullName>
        <label>Trade a&amp;p Promotion Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Promotion Master</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Type__c</columns>
        <columns>ASI_CRM_Description__c</columns>
        <columns>ASI_CRM_Discount__c</columns>
        <columns>ASI_CRM_Buy_X__c</columns>
        <columns>ASI_CRM_Get_Y__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>CREATED_DATE</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Promotion_Master__c.ASI_CRM_CN_Promotion_Master</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Alina</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Type__c</columns>
        <columns>ASI_CRM_Description__c</columns>
        <columns>ASI_CRM_Discount__c</columns>
        <columns>ASI_CRM_Buy_X__c</columns>
        <columns>ASI_CRM_Get_Y__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>CREATED_DATE</columns>
        <columns>ASI_CRM_Promotion_ID__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Promotion_Master__c.ASI_CRM_CN_Promotion_Master</value>
        </filters>
        <label>All_Alina</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_New_Hierarchy</fullName>
        <columns>NAME</columns>
        <columns>ASI_CTY_CN_WS_Customer_Type__c</columns>
        <columns>ASI_CTY_CN_WS_Region__c</columns>
        <columns>ASI_CTY_CN_WS_Commercial_Team__c</columns>
        <columns>ASI_CTY_CN_WS_Channel__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Promotion_Master__c.ASI_CTY_WS_CN_Promotion_Master_Hierarchy</value>
        </filters>
        <label>All - New Hierarchy</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Promotion Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Promotion Masters</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_Promotion_Master</fullName>
        <active>true</active>
        <label>CN Promotion Master</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CTY_WS_CN_Promotion_Master_Hierarchy</fullName>
        <active>true</active>
        <label>CN Promotion Master Hierarchy</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>CN_Mandatory_Field</fullName>
        <active>true</active>
        <errorConditionFormula>IF( RecordType.DeveloperName == &quot;ASI_CRM_CN_Promotion_Master&quot; &amp;&amp; ( ( ISPICKVAL( ASI_CRM_Type__c, &quot;Buy X Get Y&quot; ) &amp;&amp; ( ISNULL( ASI_CRM_Buy_X__c ) || ISNULL( ASI_CRM_Get_Y__c ) ) ) || ( ISPICKVAL( ASI_CRM_Type__c, &quot;Discount&quot; ) &amp;&amp; ISNULL( ASI_CRM_Discount__c ) ) ), True, False )</errorConditionFormula>
        <errorMessage>For Type = Buy X Get Y : Please fill-in Buy X and Get Y.
For Type = Discount : Please fill-in Discount %</errorMessage>
    </validationRules>
</CustomObject>